--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,2 +1,6 @@
 <h1>bookmarks</h1>
-<%= @bookmarks %>
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li><%= bookmark %></li>
+  <% end %>
+</ul>
