--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,11 +1,5 @@
-<h1>bookmarks</h1>
-<form action="/bookmarks" method="post">
+<form method="post" action="/bookmarks/new">
   <input type="text" name="url" placeholder="URL" />
   <input type="text" name="title" placeholder="Title" />
   <input type="submit" value="Submit" />
 </form>
-<ul>
-  <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
-  <% end %>
-</ul>
