--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -6,6 +6,6 @@
 </form>
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li class='bookmark'><%= bookmark.title %></li>
   <% end %>
 </ul>
