--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,24 +1,59 @@
-<form method="post" action="/bookmarks/new">
-  <input type="text" name="url" placeholder="URL" />
-  <input type="text" name="title" placeholder="Title" />
-  <input type="submit" value="Submit" />
-</form>
+<% if @user %>
+  <h1>Welcome, <%= @user.email %></h1>
+  <form action="/sessions/destroy" method="post">
+    <input type="submit" value="Sign out" />
+  </form>
+<% end %>
+<h2> Bookmarks: </h2>
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li class='bookmark' id="bookmark-<%= bookmark.id %>">
+    <li class="bookmark" id="bookmark-<%= bookmark.id %>">
       <a href="<%= bookmark.url %>" target="_blank">
         <%= bookmark.title %>
       </a>
       <form action="/bookmarks/<%= bookmark.id %>" method="post">
-        <input type='hidden' name='_method' value='DELETE'/>
+        <input type="hidden" name="_method" value="DELETE" />
         <input type="submit" value="Delete" />
       </form>
       <form action="/bookmarks/<%= bookmark.id %>/edit" method="get">
         <input type="submit" value="Edit" />
       </form>
+      <form action="/bookmarks/<%= bookmark.id %>/comments/new" method="get">
+        <input type="submit" value="Add Comment" />
+      </form>
+      <form action="/bookmarks/<%= bookmark.id %>/tags/new" method="get">
+        <input type="submit" value="Add Tag" />
+      </form>
+      <% if bookmark.comments.length > 0 %>
+      <div>
+        <h3>Comments</h3>
+        <ul>
+          <% bookmark.comments.each do |comment| %>
+            <li><%= comment.text %></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+      <% if bookmark.tags.length > 0 %>
+        <div>
+          <h3>Tags</h3>
+          <ul>
+            <% bookmark.tags.each do |tag| %>
+              <li>
+                <a href="/tags/<%= tag.id %>/bookmarks">
+                  <%= tag.content %>
+                </a>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
     </li>
   <% end %>
-  <p>
-    <%= flash[:notice] %>
-  </p>
 </ul>
+
+<p>
+<h2 style="color:red">
+  <%= flash[:notice] %>
+</h2>
+</p>
